src/test/testdata/filetypes/skin/inspections/nonExistingResourceAliasInspection.skin
{
  com.badlogic.gdx.graphics.Color: {
    white: { r: 1, g: 1, b: 1, a: 1 },
    red: { r: 1, g: 0, b: 0, a: 1 },
    yellow: { r: 0.5, g: 0.5, b: 0, a: 1 },
    a: white,
    b: red,
    c: <error descr="'blue' does not refer to anything. Resources must be defined before they can be used.">blue</error>,
    d: <error descr="'green' does not refer to anything. Resources must be defined before they can be used.">green</error>,
    y: <error descr="'z' does not refer to anything. Resources must be defined before they can be used.">z</error>
  },
  com.badlogic.gdx.graphics.g2d.BitmapFont: {
    medium: { file: medium.fnt }
  },
  com.badlogic.gdx.scenes.scene2d.ui.TextButton$TextButtonStyle: {
    default: {
      down: round-down, up: round,
      font: medium, fontColor: white
    },
    toggle: {
      down: round-down, up: round, checked: round-down,
      font: medium, fontColor: white, checkedFontColor: red
    },
    green: {
      down: round-down, up: round,
      font: medium, fontColor: { r: 0, g: 1, b: 0, a: 1 }
    },
    standard: toggle,
    non-standard: <error descr="'notoggle' does not refer to anything. Resources must be defined before they can be used.">notoggle</error>,
    x: <error descr="'z' does not refer to anything. Resources must be defined before they can be used.">z</error>
  },
  com.badlogic.gdx.scenes.scene2d.ui.Skin$TintedDrawable: {
    round-green: { name: round, color: <error descr="'green' does not refer to anything. Resources must be defined before they can be used.">green</error> }
  }
  com.badlogic.gdx.graphics.Color: {
    blue: { r: 1, g: 1, b: 1, a: 1 },
    f: <error descr="'green' does not refer to anything. Resources must be defined before they can be used.">green</error>,
    e: yellow,
    z: d
  },
  com.badlogic.gdx.scenes.scene2d.ui.TextButton$TextButtonStyle: {
    yes: green,
    no: <error descr="'yellow' does not refer to anything. Resources must be defined before they can be used.">yellow</error>,
    z: <error descr="'d' does not refer to anything. Resources must be defined before they can be used.">d</error>
  }

    com.example.ColorArrayHolder: {
     a: {
        colors: [red, <error descr="'pink' does not refer to anything. Resources must be defined before they can be used.">pink</error> ],
        moreColors: [pink, [<error descr="'pink' does not refer to anything. Resources must be defined before they can be used.">pink</error>]],
        m: [
          {
            textButtonStyle: <error descr="'d' does not refer to anything. Resources must be defined before they can be used.">d</error>
          },
          {
            textButtonStyle: no
          }
          {
            textButtonStyle: <error descr="'pink' does not refer to anything. Resources must be defined before they can be used.">pink</error>
          }
        ]
        textButtonStyles: [
          {
            font: {
              flip: true
              file: sfdsdsf
            }
          },
          {
            font: medium
          },
          {
            font: <error descr="'pink' does not refer to anything. Resources must be defined before they can be used.">pink</error>
          }
        ]
      }
    },

    com.badlogic.gdx.scenes.scene2d.ui.TextButton$TextButtonStyle: {
      d: {
        fontColor: <error descr="'pink' does not refer to anything. Resources must be defined before they can be used.">pink</error>
      }
    }
}